--- a/SchoolDiarySystem/Views/Parent/Index.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 @using SchoolDiarySystem.Models
-@model IEnumerable<Students>
+@model IEnumerable<Parents>
 
 
 <!doctype html>
@@ -16,7 +16,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>School Diary Management | Teacher</title>
+    <title>School Diary Management | Parent</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -253,12 +253,12 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>Student</h3>
+                    <h3>Parent</h3>
                     <ul>
                         <li>
                             <a href="index-2.html">Home</a>
                         </li>
-                        <li>All Students</li>
+                        <li>All Parents</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
@@ -267,7 +267,7 @@
                     <div class="card-body">
                         <div class="heading-layout1">
                             <div class="item-title">
-                                <h3>All Students Data</h3>
+                                <h3>All Parents Data</h3>
                             </div>
                         </div>
                         <form class="mg-b-20">
@@ -286,10 +286,7 @@
                                     <tr>
                                         <th>First Name</th>
                                         <th>Last Name</th>
-                                        <th>Gender</th>
-                                        <th>Class</th>
-                                        <th>Parent</th>
-                                        <th>Day of Birth</th>
+                                        <th>City</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -317,22 +314,13 @@
                                                 @Html.DisplayFor(m => item.LastName)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(m => item.Gender)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(m => item.Class.ClassNo)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(m => item.Parent.FullName)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(m => item.DayofBirth)
+                                                @Html.DisplayFor(m => item.City)
                                             </td>
 
                                             <td>
-                                                @Html.ActionLink("Update", "Update", new { id = item.StudentID })
-                                                @Html.ActionLink("Details", "Details", new { id = item.StudentID })
-                                                @Html.ActionLink("Delete", "Delete", new { id = item.StudentID })
+                                                @Html.ActionLink("Update", "Update", new { id = item.ParentID })
+                                                @Html.ActionLink("Details", "Details", new { id = item.ParentID })
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.ParentID })
                                             </td>
                                         </tr>
                                     }
