--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -3,19 +3,20 @@
     Layout = null;
 }
 @using SchoolDiarySystem.Models
-@model Class
+@model IEnumerable<Topics>
+
 
 <!doctype html>
 <html class="no-js" lang="">
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/add-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/all-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>School Diary Management | Delete Class</title>
+    <title>School Diary Management | Topic</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -252,56 +253,87 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>Class</h3>
+                    <h3>Topics</h3>
                     <ul>
                         <li>
                             <a href="index-2.html">Home</a>
                         </li>
-                        <li>Class Details</li>
+                        <li>All Topics</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
-                <!-- Student Table Area Start Here -->
+                <!-- Teacher Table Area Start Here -->
                 <div class="card height-auto">
                     <div class="card-body">
                         <div class="heading-layout1">
                             <div class="item-title">
-                                <h3>Are you sure you want to delete this class?</h3>
+                                <h3>All Topics Data</h3>
                             </div>
                         </div>
-                        <div class="single-info-details">
-                            <div class="item-img">
-                                <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
-                            </div>
-                            <div class="item-content">
-                                <div class="header-inline item-header">
-                                    @Html.Label(Model.ClassNo.ToString(), new { @class = "text-dark-medium font-medium" });
+                        <form class="mg-b-20">
+                            <div class="row gutters-8">
+                                <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
+                                    <input type="text" placeholder="Search by Name ..." class="form-control">
                                 </div>
-                                <div class="info-table table-responsive">
-                                    <table class="table text-nowrap">
-                                        <tbody>
-                                            <tr>
-                                                <td>Class :</td>
-                                                <td>@Html.Label(Model.ClassNo.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Teacher:</td>
-                                                <td>@Html.Label(Model.Teacher.FullName, new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Birthday:</td>
-                                                <td>@Html.Label(Model.Room.RoomType, new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
                                 </div>
-                                @using (Html.BeginForm("Delete", "Class", FormMethod.Post))
-                                {
-                                    <div class="col-12 form-group mg-t-8">
-                                        <input type="submit" value="Delete" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                                    </div>
-                                }
                             </div>
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table display data-table text-nowrap">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Time</th>
+                                        <th>Content</th>
+                                        <th>Class</th>
+                                        <th>Subject</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                @*<tfoot>
+                                        <tr>
+                                            <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                                            <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                                            <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                                            <th>@Html.DisplayNameFor(m => m.City)</th>
+                                            <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                                            <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                                            <th>@Html.DisplayNameFor(m => m.Email)</th>
+                                            <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                                            <th></th>
+                                        </tr>
+                                    </tfoot>*@
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(m => item.TopicDate)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Time)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Content)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Class.ClassNo)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(m => item.Subject.SubjectTitle)
+                                            </td>
+
+                                            <td>
+                                                @Html.ActionLink("Update", "Update", new { id = item.TopicID })
+                                                @Html.ActionLink("Details", "Details", new { id = item.TopicID })
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.TopicID })
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -314,7 +346,7 @@
                 <br />
                 <br />
                 <br />
-                <!-- Student Table Area End Here -->
+                <!-- Teacher Table Area End Here -->
                 <footer class="footer-wrap-layout1">
                     <div class="copyright">© Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a></div>
                 </footer>
@@ -330,6 +362,12 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="~/Content/js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="~/Content/js/datepicker.min.js"></script>
+    <!-- Smoothscroll Js -->
+    <script src="~/Content/js/jquery.smoothscroll.min.html"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
     <!-- Custom Js -->
@@ -338,5 +376,5 @@
 </body>
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/teacher-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/all-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 </html>
