--- a/SchoolDiarySystem/Views/Comment/Create.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Create.cshtml
@@ -1,9 +1,8 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 @using SchoolDiarySystem.Models
-@model Topics
+@model Comments
 
 <!doctype html>
 <html class="no-js" lang="">
@@ -15,7 +14,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>School Diary Management | Topic Details</title>
+    <title>School Diary Management | Add Comment</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -252,88 +251,63 @@
             <div class="dashboard-content-one">
                 <!-- Breadcubs Area Start Here -->
                 <div class="breadcrumbs-area">
-                    <h3>Topic</h3>
+                    <h3>Comment</h3>
                     <ul>
                         <li>
                             <a href="index-2.html">Home</a>
                         </li>
-                        <li>Topic Details</li>
+                        <li>Add New Comment</li>
                     </ul>
                 </div>
                 <!-- Breadcubs Area End Here -->
-                <!-- Student Table Area Start Here -->
+                <!-- Add New Teacher Area Start Here -->
                 <div class="card height-auto">
                     <div class="card-body">
                         <div class="heading-layout1">
                             <div class="item-title">
-                                <h3>Topic Details</h3>
+                                <h3>Add New Comment</h3>
                             </div>
                         </div>
-                        <div class="single-info-details">
-                            <div class="item-content">
-                                <div class="header-inline item-header">
-                                    <div class="header-elements">
-                                        <ul>
-                                            <li><a href="#"><i class="fas fa-print"></i></a></li>
-                                            <li><a href="#"><i class="fas fa-download"></i></a></li>
-                                        </ul>
+                        @using (Html.BeginForm("Create", "Comment", FormMethod.Post))
+                        {
+                            <form class="new-added-form">
+                                <div class="row">
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Select Class *</label>
+                                        @Html.DropDownList("ClassID", null, new { @class = "select2" })
+                                        @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
+                                    </div>
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Select Subject *</label>
+                                        @Html.DropDownList("SubjectID", null, new { @class = "select2" })
+                                        @Html.ValidationMessageFor(m => m.SubjectID, "", new { @class = "text-danger" })
+                                    </div>
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Select Date *</label>
+                                        @Html.TextBoxFor(m => m.CommentDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob" })
+                                        @Html.ValidationMessageFor(m => m.CommentDate, "", new { @class = "text-danger" })
+                                    </div>
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Select Time *</label>
+                                        @Html.DropDownList("Time", null, new { @class = "select2" })
+                                        @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
+                                        <i class="far fa-calendar-alt"></i>
+                                    </div>
+                                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                        <label>Comment *</label>
+                                        @Html.TextBoxFor(m => m.Comment, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                        @Html.ValidationMessageFor(m => m.Comment, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-12 form-group mg-t-8">
+                                        <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
                                     </div>
                                 </div>
-                                <p>@Html.Label(Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</p>
-                                <div class="info-table table-responsive">
-                                    <table class="table text-nowrap">
-                                        <tbody>
-                                            <tr>
-                                                <td>Date:</td>
-                                                <td>@Html.Label(Model.TopicDate.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Time:</td>
-                                                <td>@Html.Label(Model.Time.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            @*<tr>
-                                                <td>Birthday:</td>
-                                                <td>@Html.Label(Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>*@
-                                            <tr>
-                                                <td>Class:</td>
-                                                <td>@Html.Label(Model.Class.ClassNo.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Subject:</td>
-                                                <td>@Html.Label(Model.Subject.SubjectTitle, new { @class = "font-medium text-dark-medium" })</td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    @using (Html.BeginForm("Update", "Topic", new { id = Model.TopicID }, FormMethod.Post))
-                                                    {
-                                                        <div class="col-12 form-group mg-t-8">
-                                                            <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                                                        </div>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @using (Html.BeginForm("Delete", "Topic", new { id = Model.TopicID }, FormMethod.Post))
-                                                    {
-                                                        <div class="col-12 form-group mg-t-8">
-                                                            <input type="submit" value="Delete" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                                                        </div>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @using (Html.BeginForm("Index", "Topic", FormMethod.Post))
-                                                    {
-                                                        <div class="col-12 form-group mg-t-8">
-                                                            <input type="submit" value="Back to List" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                                                        </div>
-                                                    }
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
+                            </form>
+                        }
                     </div>
                 </div>
                 <br />
@@ -345,7 +319,7 @@
                 <br />
                 <br />
                 <br />
-                <!-- Student Table Area End Here -->
+                <!-- Add New Teacher Area End Here -->
                 <footer class="footer-wrap-layout1">
                     <div class="copyright">© Copyrights <a href="#">Arbi, Erika, Vlera</a> 2020. All rights reserved.</a></div>
                 </footer>
@@ -361,6 +335,12 @@
     <script src="~/Content/js/popper.min.js"></script>
     <!-- Bootstrap js -->
     <script src="~/Content/js/bootstrap.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="~/Content/js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="~/Content/js/datepicker.min.js"></script>
+    <!-- Smoothscroll Js -->
+    <script src="~/Content/js/jquery.smoothscroll.min.html"></script>
     <!-- Scroll Up Js -->
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
     <!-- Custom Js -->
@@ -369,5 +349,5 @@
 </body>
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/teacher-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
+<!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/add-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 </html>
