--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -6,10 +6,10 @@
 
 <!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/add-teacher.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:09 GMT -->
 <!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>School Diary Management | Add Teacher</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,13 +129,13 @@
                             <a href="#" class="nav-link"><i class="flaticon-classmates"></i><span>Students</span></a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-student.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Student")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Students
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="student-details.html" class="nav-link">
-                                        <i class="fas fa-angle-right"></i>Student Details
+                                    <a href="@Url.Action("Create", "Student")" class="nav-link">
+                                        <i class="fas fa-angle-right"></i>Add Student
                                     </a>
                                 </li>
                             </ul>
@@ -161,12 +161,12 @@
                             <a href="#" class="nav-link"><i class="flaticon-couple"></i><span>Parents</span></a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-parents.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Parent")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Parents
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="add-parents.html" class="nav-link">
+                                    <a href="@Url.Action("Create", "Parent")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add Parent
                                     </a>
                                 </li>
@@ -178,12 +178,12 @@
                             </a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-class.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Class")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Classes
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="add-class.html" class="nav-link">
+                                    <a href="@Url.Action("Create", "Class")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add New Class
                                     </a>
                                 </li>
@@ -195,12 +195,12 @@
                             </a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-subject.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Subject")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Subjects
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="add-class.html" class="nav-link">
+                                    <a href="@Url.Action("Create", "Subject")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add New Subject
                                     </a>
                                 </li>
@@ -212,12 +212,12 @@
                             </a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-class.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Schedule")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Schedule
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="add-class.html" class="nav-link">
+                                    <a href="@Url.Action("Create", "Schedule")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add New Schedule
                                     </a>
                                 </li>
@@ -229,12 +229,12 @@
                             </a>
                             <ul class="nav sub-group-menu">
                                 <li class="nav-item">
-                                    <a href="all-subject.html" class="nav-link">
+                                    <a href="@Url.Action("Index", "Room")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>All Rooms
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="add-class.html" class="nav-link">
+                                    <a href="@Url.Action("Create", "Room")" class="nav-link">
                                         <i class="fas fa-angle-right"></i>Add New Room
                                     </a>
                                 </li>
@@ -243,7 +243,11 @@
                     </ul>
                 </div>
             </div>
+            <!-- Social Media End Here -->
+            <!-- Footer Area Start Here -->
+            <!-- Footer Area End Here -->
             <!-- Sidebar Area End Here -->
+            @RenderBody()
         </div>
         <!-- Page Area End Here -->
     </div>
