Comment, Review and Topic design reconstruction.

--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -39,7 +39,7 @@
 
 <body>
     <!-- Preloader Start Here -->
-    <div id="preloader"></div>
+    @*<div id="preloader"></div>*@
     <!-- Preloader End Here -->
     <div id="wrapper" class="wrapper bg-ash">
         <!-- Header Menu Area Start Here -->
@@ -248,6 +248,12 @@
             <!-- Footer Area End Here -->
             <!-- Sidebar Area End Here -->
             @RenderBody()
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
         </div>
         <!-- Page Area End Here -->
     </div>
