--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -5,91 +5,83 @@
     <div class="dashboard-content-one">
         <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Comments</h3>
+            <h3>Notice Board</h3>
             <ul>
                 <li>
                     <a href="index-2.html">Home</a>
                 </li>
-                <li>All Comments</li>
+                <li>Notice</li>
             </ul>
         </div>
         <!-- Breadcubs Area End Here -->
-        <!-- Teacher Table Area Start Here -->
-        <div class="card height-auto">
-            <div class="card-body">
-                <div class="heading-layout1">
-                    <div class="item-title">
-                        <h3>All Comments Data</h3>
-                    </div>
-                </div>
-                <form class="mg-b-20">
-                    <div class="row gutters-8">
-                        <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
-                            <input type="text" placeholder="Search by Name ..." class="form-control">
+        <div class="row">
+            <!-- All Notice Area Start Here -->
+            <div class="col-8-xxxl col-12">
+                <div class="card height-auto">
+                    <div class="card-body">
+                        <div class="heading-layout1">
+                            <div class="item-title">
+                                <h3>Notice Board</h3>
+                            </div>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button"
+                                   data-toggle="dropdown" aria-expanded="false">...</a>
+
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                        </div>
-                    </div>
-                </form>
-                <div class="table-responsive">
-                    <table class="table display data-table text-nowrap">
-                        <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>Time</th>
-                                <th>Comment</th>
-                                <th>Class</th>
-                                <th>Subject</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        @*<tfoot>
-                                <tr>
-                                    <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                    <th>@Html.DisplayNameFor(m => m.City)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                    <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                    <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                    <th></th>
-                                </tr>
-                            </tfoot>*@
-                        <tbody>
+                        <form class="mg-b-20">
+                            <div class="row gutters-8">
+                                <div class="col-lg-5 col-12 form-group">
+                                    <input type="text" placeholder="Search by Date ..." class="form-control">
+                                </div>
+                                <div class="col-lg-5 col-12 form-group">
+                                    <input type="text" placeholder="Search by Title ..." class="form-control">
+                                </div>
+                                <div class="col-lg-2 col-12 form-group">
+                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="notice-board-wrap">
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(m => item.CommentDate)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Time)
-                                    </td>
-                                    <td>
+                            <div class="notice-list">
+                                <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.CommentDate)</div>
+                                @if (item.Review.ReviewID != 0)
+                                {
+                                        <a href="#">
+                                            <div class="post-date bg-pink">
+                                                Reviewed
+                                            </div>
+                                        </a>
+                                }
+                                <h6 class="notice-title">
+                                    <a href="#">
                                         @Html.DisplayFor(m => item.Comment)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Class.ClassNo)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Subject.SubjectTitle)
-                                    </td>
-
-                                    <td>
-                                        @Html.ActionLink("Update", "Update", new { id = item.CommentID })
-                                        @Html.ActionLink("Details", "Details", new { id = item.CommentID })
-                                    </td>
-                                </tr>
+                                    </a>
+                                </h6>
+                                @if (item.Review.ReviewID != 0)
+                                {
+                                    <div class="entry-meta"> @Html.DisplayFor(m => item.Review.Review)</div>
+                                }
+                                <br />
+                                <div class="entry-meta">  @Html.DisplayFor(m => item.Student.FullName) / <span>@Html.DisplayFor(m => item.Subject.SubjectTitle)</span></div>
+                            </div>
                             }
-                        </tbody>
-                    </table>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!-- All Notice Area End Here -->
         </div>
     </div>
 </div>
+
 
 @section Scripts {
     <!-- jquery-->
