--- a/SchoolDiarySystem/Views/Review/Index.cshtml
+++ b/SchoolDiarySystem/Views/Review/Index.cshtml
@@ -5,113 +5,92 @@
     <div class="dashboard-content-one">
         <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
-            <h3>Comments</h3>
+            <h3>Notice Board</h3>
             <ul>
                 <li>
                     <a href="index-2.html">Home</a>
                 </li>
-                <li>All Comments</li>
+                <li>Notice</li>
             </ul>
         </div>
         <!-- Breadcubs Area End Here -->
-        <!-- Teacher Table Area Start Here -->
-        <div class="card height-auto">
-            <div class="card-body">
-                <div class="heading-layout1">
-                    <div class="item-title">
-                        <h3>All Comments Data</h3>
-                    </div>
-                </div>
-                <form class="mg-b-20">
-                    <div class="row gutters-8">
-                        <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
-                            <input type="text" placeholder="Search by Name ..." class="form-control">
+        <div class="row">
+            <!-- All Notice Area Start Here -->
+            <div class="col-8-xxxl col-12">
+                <div class="card height-auto">
+                    <div class="card-body">
+                        <div class="heading-layout1">
+                            <div class="item-title">
+                                <h3>Notice Board</h3>
+                            </div>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button"
+                                   data-toggle="dropdown" aria-expanded="false">...</a>
+
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
+                                    <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                        </div>
-                    </div>
-                </form>
-                <div class="table-responsive">
-                    <table class="table display data-table text-nowrap">
-                        <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>Time</th>
-                                <th>Comment</th>
-                                <th>Class</th>
-                                <th>Subject</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        @*<tfoot>
-                                <tr>
-                                    <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                    <th>@Html.DisplayNameFor(m => m.City)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                    <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                    <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                    <th></th>
-                                </tr>
-                            </tfoot>*@
-                        <tbody>
+                        <form class="mg-b-20">
+                            <div class="row gutters-8">
+                                <div class="col-lg-5 col-12 form-group">
+                                    <input type="text" placeholder="Search by Date ..." class="form-control">
+                                </div>
+                                <div class="col-lg-5 col-12 form-group">
+                                    <input type="text" placeholder="Search by Title ..." class="form-control">
+                                </div>
+                                <div class="col-lg-2 col-12 form-group">
+                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="notice-board-wrap">
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Comment.Comment)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Review)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.ReviewDate)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Comment.Class.ClassNo)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(m => item.Comment.Subject.SubjectTitle)
-                                    </td>
-
-                                    <td>
-                                        @Html.ActionLink("Update", "Update", new { id = item.CommentID })
-                                        @Html.ActionLink("Details", "Details", new { id = item.CommentID })
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                                <div class="notice-list">
+                                    <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.ReviewDate)</div>
+                                    <h6 class="notice-title">
+                                        <a href="#">
+                                            @Html.DisplayFor(m => item.Review)
+                                        </a>
+                                    </h6>
+                                    <div class="entry-meta">  @Html.DisplayFor(m => item.Comment.Student.FullName) / <span>@Html.DisplayFor(m => item.Comment.Subject.SubjectTitle)</span></div>
+                                </div>
+                                }
+                        </div>
+                        </div>
                 </div>
             </div>
+            <!-- All Notice Area End Here -->
         </div>
     </div>
 </div>
 
-@section Scripts {
-    <!-- jquery-->
-    <script src="~/Content/js/jquery-3.3.1.min.js"></script>
-    <!-- Plugins js -->
-    <script src="~/Content/js/plugins.js"></script>
-    <!-- Popper js -->
-    <script src="~/Content/js/popper.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="~/Content/js/bootstrap.min.js"></script>
-    <!-- Counterup Js -->
-    <script src="~/Content/js/jquery.counterup.min.js"></script>
-    <!-- Moment Js -->
-    <script src="~/Content/js/moment.min.js"></script>
-    <!-- Waypoints Js -->
-    <script src="~/Content/js/jquery.waypoints.min.js"></script>
-    <!-- Scroll Up Js -->
-    <script src="~/Content/js/jquery.scrollUp.min.js"></script>
-    <!-- Full Calender Js -->
-    <script src="~/Content/js/fullcalendar.min.js"></script>
-    <!-- Chart Js -->
-    <script src="~/Content/js/Chart.min.js"></script>
-    <!-- Custom Js -->
-    <script src="~/Content/js/main.js"></script>
-}
+
+        @section Scripts {
+            <!-- jquery-->
+            <script src="~/Content/js/jquery-3.3.1.min.js"></script>
+            <!-- Plugins js -->
+            <script src="~/Content/js/plugins.js"></script>
+            <!-- Popper js -->
+            <script src="~/Content/js/popper.min.js"></script>
+            <!-- Bootstrap js -->
+            <script src="~/Content/js/bootstrap.min.js"></script>
+            <!-- Counterup Js -->
+            <script src="~/Content/js/jquery.counterup.min.js"></script>
+            <!-- Moment Js -->
+            <script src="~/Content/js/moment.min.js"></script>
+            <!-- Waypoints Js -->
+            <script src="~/Content/js/jquery.waypoints.min.js"></script>
+            <!-- Scroll Up Js -->
+            <script src="~/Content/js/jquery.scrollUp.min.js"></script>
+            <!-- Full Calender Js -->
+            <script src="~/Content/js/fullcalendar.min.js"></script>
+            <!-- Chart Js -->
+            <script src="~/Content/js/Chart.min.js"></script>
+            <!-- Custom Js -->
+            <script src="~/Content/js/main.js"></script>
+        }
